feat: 初步实现插入链接功能

--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -45,4 +45,14 @@
         position: relative;
         max-width: 100%;
     }
+
+    a {
+        color: #1b9aee;
+        text-decoration: none;
+        word-break: break-word;
+
+        &.selected {
+            background: #b3d4fd;
+        }
+    }
 }
