--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -55,4 +55,16 @@
             background: #b3d4fd;
         }
     }
+
+    ol, ul {
+        margin: 0 0 15px;
+        padding: 0 0 0 20px;
+        line-height: 1.6;
+        font-weight: 300;
+    }
+
+    li {
+        line-height: 20px;
+        margin-left: 0;
+    }
 }
