--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -67,4 +67,28 @@
         line-height: 20px;
         margin-left: 0;
     }
+
+    table {
+        width: 100%;
+        table-layout: fixed;
+        border-collapse: collapse;
+        border-spacing: 0;
+        margin: 15px 0;
+
+        thead {
+            background-color: #f9f9f9;
+        }
+
+        th, td {
+            min-width: 40px;
+            height: 30px;
+            border: 1px solid #ccc;
+            vertical-align: top;
+            padding: 2px 4px;
+            text-align: left;
+            box-sizing: border-box;
+            line-height: 24px;
+            color: #595959;
+        }
+    }
 }
